[gd_scene load_steps=2 format=3 uid="uid://dc152kckd1egf"]

[ext_resource type="Script" uid="uid://mubfdc21qcah" path="res://GUI/menu/menu.gd" id="1_b2e4p"]

[node name="MainMenu" type="PanelContainer"]
custom_minimum_size = Vector2(500, 250)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -165.0
offset_right = 369.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2

[node name="FlowContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="FlowContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
alignment = 1

[node name="title" type="Label" parent="FlowContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "How To Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="para" type="RichTextLabel" parent="FlowContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 13
text = "The game is simple, to progress through the game you must complete the designated trials on each map. Clues will be given on signboards at the beginning of each trial.
Score is given based on time taken to complete each trial, the timer will be displayed whilst playing, and can be seen at the end upon finishing each trial."
fit_content = true
horizontal_alignment = 3

[node name="outtake" type="Label" parent="FlowContainer/VBoxContainer"]
layout_mode = 2
text = "Let the fastest be the winner!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(120.38, 36.605)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="Button" type="Button" parent="PanelContainer"]
layout_mode = 2
text = "Back"
script = ExtResource("1_b2e4p")

[connection signal="pressed" from="PanelContainer/Button" to="PanelContainer/Button" method="_on_back_pressed"]
